--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -26,7 +26,7 @@ body {
   position:relative;
   width: 780px;
   height: 500px;
-  background-color: #ffffff70;
+  background-color: rgba(0, 0, 0, 0);
   display: block;
   margin: 0 auto;
   margin-top: 100px;
