--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -13,7 +13,7 @@ body {
 
 .Valikko{
   position: relative;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0);
   height: 100px;
   display: block;
 }
