--- a/css/links2.css
+++ b/css/links2.css
@@ -14,7 +14,7 @@ body {
 }
 
 .Valikko{
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0);
   height: 100px;
   margin-right: 15px;
 }
