--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 .Valikko{
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0);
   height: 100px;
   position: relative;
   margin-right: 15px;
