--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -13,7 +13,7 @@ body {
 
 .Valikko{
   position: relative;
-  border: 1px solid black;
+  border: 1px solid rgba(0, 0, 0, 0);
   height: 100px;
   display: block;
   margin-right: 15px;
@@ -26,7 +26,7 @@ body {
   position:relative;
   width: 780px;
   height: 500px;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #ffffff70;
   display: block;
   margin: 0 auto;
   margin-top: 100px;
