--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     transition: opacity 300ms ease-in-out;
     animation-duration: 1s;
+    animation-name: sivu;
 }
 #myvideo {
     position: fixed;
